<resources>
    <string name="app_name">Insta Paw</string>
    <string name="app_database_name">InstaPaw</string>
    <string name="title_home">Home</string>
    <string name="title_rescue">Rescue</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_post">Add Post</string>
    <string name="web_client_id" translatable="false">626893984033-7l7l1ee6e1asbjuubmcn7es4vkpoge5h.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="action_sign_in"> Sign in </string>
    <string name="action_log_in"> Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_user_name">"Please enter your name"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">" Register"</string>

    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="welcome_to_instapaw">WELCOME TO INSTAPAW</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="facebook_app_id">695192802321178</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">20447d78f08abc54bf4f41748cd8a2ae</string>
    <string name="title_activity_rescue">RescueActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_compose">ComposeActivity</string>


</resources>