<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_rescue"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_rescue" />

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/title_add_post"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile"/>

</menu>